Bug 403976 - Message viewer: Lines starting with | (pipe symbol) incorrectly shown as quoted lines
Summary: Message viewer: Lines starting with | (pipe symbol) incorrectly shown as quot...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-05 22:18 UTC by Laura David Hurka
Modified: 2019-03-10 14:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.11.0
Sentry Crash Report:


Attachments
Example for a messed up table in kmail2 (683 bytes, application/mbox)
2019-02-05 22:18 UTC, Laura David Hurka
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Laura David Hurka 2019-02-05 22:18:23 UTC
Created attachment 117849 [details]
Example for a messed up table in kmail2

SUMMARY
Lines starting with | after much whitespace are displayed as quote, although they should not be. This messes up tables.

STEPS TO REPRODUCE
1. Take a typical Bugzilla CC added message, or create a message like:
           What    |Removed                     |Added
----------------------------------------------------------------------------
                 CC|                            |someone@kde.org
                   |                            |someone.else@kde.org

2. Open it in message viewer

OBSERVED RESULT
Because the last line starts with | (after some whitespace), it is shown as quote:
           What    |Removed                     |Added
----------------------------------------------------------------------------
                 CC|                            |someone@kde.org
||someone.else@kde.org

EXPECTED RESULT
To avoid this, do not recognize quoting signs after more than, say, 5 spaces; or do not remove whitespace from quotes.

It is not a big problem for me if the whitespace is removed when replying to the message. (Might be a problem for the recipient, though.)

SOFTWARE/OS VERSIONS
KMail Version: 5.10.1
KDE Neon 5.14
KDE Plasma Version: 5.14.5
KDE Frameworks Version: 5.54.0
Qt Version: 5.11.2

ADDITIONAL QUESTION
I thought I could change which symbols are recognized as quote. Where?
Comment 1 Laurent Montel 2019-03-10 13:54:53 UTC
I confirm it.
I will investigate soon
Comment 2 Laurent Montel 2019-03-10 14:11:06 UTC
Git commit 88391edf5502e92767dc283d16bfd160c47aa3ff by Laurent Montel.
Committed on 10/03/2019 at 14:10.
Pushed by mlaurent into branch 'master'.

fix Bug 403976 - Message viewer: Lines starting with | (pipe symbol) incorrectly shown as quoted lines

FIXED-IN: 5.11.0

M  +5    -3    messageviewer/src/messagepartthemes/default/plugins/quotehtml.cpp

https://commits.kde.org/messagelib/88391edf5502e92767dc283d16bfd160c47aa3ff