fix Bug 403976 - Message viewer: Lines starting with | (pipe symbol) incorrectly shown as quoted lines

FIXED-IN: 5.11.0
BUG: 403976